staged for deployment

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>React App</title>
+    <title>Sweet B's</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
